<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Weather!</string>
    <string name="app_name">BlueSky</string>
    <string name="search_hint">Search City or Zip</string>
    
    <string name="menu_label_search">Search</string>
    <string name="menu_label_refresh">Refresh</string>
    <string name="menu_label_settings">Settings</string>
    
    <string name="weather_label_time">Update Time: </string>
    <string name="weather_label_wind_speed">Wind</string>
    <string name="weather_label_wind_gust">Gust</string>
    <string name="weather_label_humidity">Humidity</string>
    <string name="weather_label_rainfall">Rainfall</string>
    <string name="weather_label_pressure">Pressure</string>
    <string name="weather_label_visibility">Visibility</string>
    <string name="weather_label_dew">Dew Point</string>
    <string name="weather_label_uv">UV Index</string>
    <string name="weather_label_pollen">Pollen</string>
    
    <string name="forecast_title_short">Forecast</string>
    <string name="forecast_title_extended">5-Day</string>
    <string name="forecast_temperature_divider">|</string>
    
    <string name="unit_english_temperature">&#x00B0;F</string>
    <string name="unit_metric_temperature">&#x00B0;C</string>
    
    <string name="about_label_version">Version: %s</string>
    <string name="about_label_about">This project is open source. To download the source code or report bugs, visit the homepage.</string>
    <string name="about_label_homepage">Homepage: http://github.com/SyntheticCode/Blue-Sky-Weather</string>
    <string name="about_label_credits">Credits:</string>
    <string name="about_label_credits_wunder">Current weather provided by Weather Underground: http://www.wunderground.com/</string>
    <string name="about_label_credits_nws">Forecasts provided by National Weather Service: http://www.nws.noaa.gov/</string>
    <string name="about_label_credits_icons">Weather icons provided by: http://xiao4.deviantart.com/art/tick-weather-icons-96294478</string>
    <string name="about_label_credits_icons2">Icons generated by Android Asset Studio: http://android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html</string>
</resources>
