<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/black" >
	
	<!-- TableLayout is needed to make Title center_vertical work -->
	<TableLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TableRow>
			<ImageView 
				android:src="@drawable/ic_launcher" 
				android:id="@+id/about_icon" 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:padding="10dip" />
			<TextView
				style="@style/AboutTitle"
				android:id="@+id/about_title"
				android:text="@string/app_name"
				android:layout_width="fill_parent"
				android:layout_gravity="center_vertical"/>
		</TableRow>
	</TableLayout>
	
	<View
		android:id="@+id/about_divider"
		android:layout_height="2dip"
		android:layout_width="fill_parent"
		android:background="@color/blue_end" />
	
	<ScrollView
		android:id="@+id/about_body"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/about_icon"
		android:background="@android:color/white"
		android:fillViewport="true">
		
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@android:color/white" >

			<TextView
				style="@style/AboutTextBold"
				android:id="@+id/about_version"
				android:text="@string/about_label_version"
				android:layout_width="fill_parent" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_about"
				android:text="@string/about_label_about"
				android:layout_width="fill_parent" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_homepage"
				android:text="@string/about_label_homepage"
				android:layout_width="fill_parent" 
				android:autoLink="web" />
			<TextView
				style="@style/AboutTextBold"
				android:id="@+id/about_credits"
				android:text="@string/about_label_credits"
				android:layout_width="fill_parent" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_credits_wunder"
				android:text="@string/about_label_credits_wunder"
				android:layout_width="fill_parent"
				android:autoLink="web" />
			<ImageView 
				android:src="@drawable/ic_wunderground_logo" 
				android:id="@+id/about_wunderLogo" 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:paddingLeft="10dip"
				android:paddingRight="10dip"
				android:paddingBottom="10dip"
				android:paddingTop="3dip" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_credits_nws"
				android:text="@string/about_label_credits_nws"
				android:layout_width="fill_parent"
				android:autoLink="web" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_credits_icons"
				android:text="@string/about_label_credits_icons"
				android:layout_width="fill_parent"
				android:autoLink="web" />
			<TextView
				style="@style/AboutText"
				android:id="@+id/about_credits_icons2"
				android:text="@string/about_label_credits_icons2"
				android:layout_width="fill_parent"
				android:autoLink="web" />
		</LinearLayout>
	</ScrollView>

</LinearLayout>
